# ReflectHLSL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure-linux.sh  hlslp.cpp  hlslp.hpp  makefile  shaders.hlsl  writeup.md
src/: Generator.cpp  Generator.hpp  HLSL.cpp  HLSL.hpp  MetaData.cpp  MetaData.hpp  hlslp.cpp  hlslp.hpp
test/: Out.inl  shaders.comp.inl  shaders.hlsl  shaders2.comp.inl  shaders2.hlsl  shaders3.comp  shaders3.comp.inl  shaders4.comp  shaders4.comp.inl
